Added dist to git Clean up and more extensive javadoc